# num_appts_simulation

./: .gitignore  README.md  pyproject.toml
num_appts_simulation/sim_param_eda/: sim_param_eda.ipynb
simulations_analysis/: sim_analysis.ipynb
simulations_py/: arg_sim.py  arg_sim_v2.py  arg_sim_v3.py  canc_sim.py  canc_sim.sh  canc_sim_v3.py  fcfs_no_wait.py  fcfs_no_wait_no_canc.py  fcfs_wait_no_canc.py  fcfs_wait_priority.py  main.py  multi_sim.sh  priority.py  test.py
simulations_py/deprecated_sims/: fcfs_no_wait_canc.py  fcfs_wait.py  main.py
simulations_py/objects/: __init__.py  patient.py  server.py  simulation.py  waitlist.py
simulations_py/parametrization_data/: att_probs.csv  att_probs_no_canc.csv  pct_face_policy.csv  pct_face_rmst.csv  pct_face_rmst_inter.csv  wait_rmst_inter.csv
simulations_py/simulations_analysis/: comparisons.py  sim_analysis.ipynb  sim_analysis.py  sim_results.py  test.txt
