[tool.poetry]
name = "num-appts-simulation"
version = "0.1.0"
description = ""
authors = ["benjamin-ravenscroft <benjamin.ravenscroft@gmail.com>"]
readme = "README.md"
packages = [{include = "num_appts_simulation"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
psycopg2 = "^2.9.9"
pyarrow = "^17.0.0"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
